--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.4
   cached_network_image: ^3.2.0
+  path_provider: ^2.0.9
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
